# folio-data-anonymization

./: .gitignore  README.md  airflow-values.yaml  pom.xml  pv-volume.yaml  pyproject.toml  setup.cfg
.github/workflows/: lint.yml  poetry-lock.yml  tests.yml  typechecking.yml
folio_data_anonymization/: anonymizer.py  database.py  users.py
folio_data_anonymization/dags/: anonymize_data.py  select_tables.py  truncate.py
folio_data_anonymization/plugins/: anonymize.py  anonymizer.py  configurations.py  database.py  providers.py  select_tables.py  truncate.py  users.py  utils.py
folio_data_anonymization/plugins/config/: anonymize-schema-tables.json  anonymize_all_user_tables.json  anonymize_associated_users_tables.json  anonymize_organization_tables.json  anonymize_users_tables.json  truncate_schemas_tables.json  user_associated_tables.json
folio_data_anonymization/plugins/sql/: counts.sql  selections.sql  truncate_schemas_tables.sql  update_jsonb.sql
folio_data_anonymization/plugins/truncate/: truncate.py
plugins/config/: anonymize-tables-jsonb.json  anonymize_organization_tables.json
src/main/java/org.folio.data/: FolioDataAnonymizationApplication.java
src/main/java/org/folio/anonymizer/: Database.java  EntryPoint.java  InventoryShuffler.java  InventoryShufflerWorker.java  LoanShuffler.java  UserDataOverwriter.java  Utils.java  VendorDataOverwriter.java
src/main/resources/: db.properties  log4j2.xml
tests/: conftest.py  mock_db.py  test_anonymize_data_dag.py  test_anonymizer.py  test_database.py  test_providers.py  test_select_tables.py  test_truncate_tables.py  test_users.py  test_utils.py
tests/fixtures/: mock_truncate_schemas_tables.json  organization.json  user.json
